<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <LinearLayout
                android:id="@+id/Info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewInfoHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingVertical="10sp"
                    android:text="@string/app_info"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/teal_700"
                    android:textSize="30sp">

                </TextView>

                <ScrollView
                    android:layout_width="370dp"
                    android:layout_height="510dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <TextView
                        android:id="@+id/textviewInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="6sp"
                        android:text="@string/app_info_text"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />
                </ScrollView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Policy"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewPolicyHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingVertical="10sp"
                    android:text="@string/policy_header"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/teal_700"
                    android:textSize="30sp">

                </TextView>

                <ScrollView
                    android:layout_width="365dp"
                    android:layout_height="510dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <TextView
                        android:id="@+id/textviewPolicy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="6sp"
                        android:text="@string/policy_text"
                        android:textAlignment="textStart"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />
                </ScrollView>

            </LinearLayout>

        </FrameLayout>
    </LinearLayout>
</TabHost>
